--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
+    "redux-persist": "^6.0.0",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
