--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/qs": "^6.9.7",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
